# pdfs-to-excel

./: .gitignore  README.md  extract.py  fields.yaml  main.py  pdf_reader.py  pyproject.toml  schema.py
docs/superpowers/specs/: 2026-03-28-pdf-to-excel-design.md
